--- a/src/Cpnucleo.Blazor/Pages/Workflow/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Workflow/Remover.razor
@@ -1,13 +1,13 @@
-@page "/impedimento/remover/{id:guid}"
+@page "/workflow/remover/{id:guid}"
 @inject ICpnucleoApiService cpnucleoApiService;
 @inject NavigationManager navigationManager;
 
-<PageTitle>CPN - Remoção de Impedimento</PageTitle>
+<PageTitle>CPN - Remoção de Workflow</PageTitle>
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5>Remoção de Impedimento</h5>
+            <h5>Remoção de Workflow</h5>
             <div class="ibox-tools">
                 <a class="fullscreen-link">
                     <i class="fa fa-expand"></i>
@@ -41,6 +41,14 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Ordem)" /><br><small class="text-navy">Ordem no Kanban</small></label>
+                        <div class="col-sm-10">
+                            <input type="hidden" @bind-value="model.Ordem">                            
+                            <p class="form-control-static">@model.Ordem</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.DataInclusao)" /></label>
                         <div class="col-sm-10">
                             <p class="form-control-static">@model.DataInclusao.ToShortDateString()</p>
@@ -49,7 +57,7 @@
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <a class="btn btn-white" role="button" href="/impedimento/listar">Voltar</a>                            
+                            <a class="btn btn-white" role="button" href="/workflow/listar">Voltar</a>                            
                             <button class="btn btn-primary" type="submit">Remover</button>
                         </div>
                     </div>
@@ -64,17 +72,17 @@
     [Parameter]
     public Guid Id { get; set; }
 
-    private ImpedimentoViewModel model = new ImpedimentoViewModel();
+    private WorkflowViewModel model = new WorkflowViewModel();
 
     protected override async Task OnInitializedAsync()
     {
-        model = await cpnucleoApiService.GetAsync<ImpedimentoViewModel>("impedimento", "", Id);
+        model = await cpnucleoApiService.GetAsync<WorkflowViewModel>("workflow", "", Id);
     }
 
     private async Task HandleValidSubmit()
     {
-        await cpnucleoApiService.DeleteAsync("impedimento", "", Id);
+        await cpnucleoApiService.DeleteAsync("workflow", "", Id);
 
-        navigationManager.NavigateTo("/impedimento/listar");
+        navigationManager.NavigateTo("/workflow/listar");
     }
 }
