--- a/src/Cpnucleo.Blazor/Shared/NavMenu.razor
+++ b/src/Cpnucleo.Blazor/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
                     <li><a href="/impedimento/listar">Relação de Impedimentos</a></li>
                     <li><a asp-page="/Recurso/Listar">Relação de Recursos</a></li>
                     <li><a href="/Projeto/Listar">Relação de Projetos</a></li>
-                    <li><a asp-page="/Workflow/Listar">Relação de Workflow</a></li>
+                    <li><a href="/workflow/listar">Relação de Workflow</a></li>
                     <li><a asp-page="/Tarefa/Listar">Relação de Tarefas</a></li>
                 </ul>
             </li>
