--- a/src/Cpnucleo.Blazor/Pages/Sistema/Alterar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Alterar.razor
@@ -33,7 +33,7 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nome</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
                             <InputText class="form-control" @bind-Value="model.Nome" />
                             <ValidationMessage For="@(() => model.Nome)" />
@@ -41,7 +41,7 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Descrição</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
                         <div class="col-sm-10">
                             <InputText class="form-control" @bind-Value="model.Descricao" />                        
                             <ValidationMessage For="@(() => model.Descricao)" />
