--- a/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
@@ -33,7 +33,7 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nome</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
                             <input type="hidden" @bind-value="model.Nome">                            
                             <p class="form-control-static">@model.Nome</p>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Descrição</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
                         <div class="col-sm-10">
                             <input type="hidden" @bind-value="model.Descricao">                            
                             <p class="form-control-static">@model.Descricao</p>
