Normalização de estrutura

--- a/src/Cpnucleo.Blazor/Pages/Impedimento/Alterar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Impedimento/Alterar.razor
@@ -17,7 +17,7 @@
         <div class="ibox-content">
 
             <EditForm class="form-horizontal" Model="@model" OnValidSubmit="@HandleValidSubmit">
-                <DataAnnotationsValidator />     
+                <DataAnnotationsValidator />
 
                 @if (model.Id == Guid.Empty)
                 {
@@ -35,7 +35,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
-                            <InputText class="form-control" @bind-Value="model.Nome" />
+                            <input type="text" class="form-control" @bind="model.Nome" placeholder="Nome" />
                             <ValidationMessage For="@(() => model.Nome)" />
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                             <button class="btn btn-primary" type="submit">Alterar</button>
                         </div>
                     </div>
-                }        
+                }
 
             </EditForm>
         </div>
