--- a/src/Cpnucleo.Blazor/Pages/Projeto/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Incluir.razor
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
-                            <InputText class="form-control" @bind-Value="model.Nome" placeholder="Nome" />
+                            <input type="text" class="form-control" @bind="model.Nome" placeholder="Nome" />
                             <ValidationMessage For="@(() => model.Nome)" />
                         </div>
                     </div>
@@ -36,15 +36,15 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.IdSistema)" /></label>
                         <div class="col-sm-10">
-                            <InputSelect class="form-control m-b" @bind-Value="model.IdSistema">
+                            <select class="form-control m-b" @bind="model.IdSistema">
                                 @foreach (var item in sistemas)
                                 {
-                                <option value="@item.Id">@item.Nome</option>
+                                    <option value="@item.Id">@item.Nome</option>
                                 }
-                        </InputSelect>
-                        <ValidationMessage For="@(() => model.IdSistema)" />
+                            </select>
+                            <ValidationMessage For="@(() => model.IdSistema)" />
+                        </div>
                     </div>
-                </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
