--- a/src/Cpnucleo.Blazor/Pages/Workflow/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Workflow/Incluir.razor
@@ -22,7 +22,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                     <div class="col-sm-10">
-                        <InputText class="form-control" @bind-Value="model.Nome" />
+                        <input type="text" class="form-control" @bind="model.Nome" placeholder="Nome" />
                         <ValidationMessage For="@(() => model.Nome)" />
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Ordem)" /><br><small class="text-navy">Ordem no Kanban</small></label>
                     <div class="col-sm-10">
-                        <input class="form-control" @bind="model.Ordem" />
+                        <input type="text" class="form-control" @bind="model.Ordem" placeholder="Ordem" />
                         <ValidationMessage For="@(() => model.Ordem)" />
                     </div>
                 </div>
