Modulo de recursos

--- a/src/Cpnucleo.Blazor/Shared/NavMenu.razor
+++ b/src/Cpnucleo.Blazor/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
                 <ul role="menu" class="dropdown-menu">
                     <li><a href="/sistema/listar">Relação de Sistemas</a></li>                                      
                     <li><a href="/impedimento/listar">Relação de Impedimentos</a></li>
-                    <li><a asp-page="/recurso/listar">Relação de Recursos</a></li>
+                    <li><a href="/recurso/listar">Relação de Recursos</a></li>
                     <li><a href="/projeto/listar">Relação de Projetos</a></li>
                     <li><a href="/workflow/listar">Relação de Workflow</a></li>
                     <li><a asp-page="/tarefa/listar">Relação de Tarefas</a></li>
