--- a/src/Cpnucleo.Blazor/Shared/NavMenu.razor
+++ b/src/Cpnucleo.Blazor/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
                     <li><a href="/recurso/listar">Relação de Recursos</a></li>
                     <li><a href="/projeto/listar">Relação de Projetos</a></li>
                     <li><a href="/workflow/listar">Relação de Workflow</a></li>
-                    <li><a asp-page="/tarefa/listar">Relação de Tarefas</a></li>
+                    <li><a href="/tarefa/listar">Relação de Tarefas</a></li>
                 </ul>
             </li>
         </ul>
