Modulo de Apontamentos

--- a/src/Cpnucleo.Blazor/Shared/NavMenu.razor
+++ b/src/Cpnucleo.Blazor/Shared/NavMenu.razor
@@ -8,7 +8,7 @@
     <div class="navbar-collapse collapse" id="navbar">
         <ul class="nav navbar-nav">
             <li>
-                <a aria-expanded="false" role="button" asp-page="/Apontamento/Listar">Apontamentos</a>
+                <a aria-expanded="false" role="button" href="/apontamento/listar">Apontamentos</a>
             </li>
             <li>
                 <a aria-expanded="false" role="button" asp-page="/FluxoTrabalho">Fluxo de Trabalho</a>
