[chore] Zaion nunca esquece de seus propositos. Volta a trabalhar sempre que possível

--- a/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoFinalizadoPartial.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoFinalizadoPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cpnucleo.Infra.CrossCutting.Util.ViewModels.TarefaViewModel
+﻿@model Cpnucleo.Infra.CrossCutting.Util.Common.DTOs.TarefaDTO
 
 <li class="@Model.TipoTarefa.Element">
     @Model.Nome
