--- a/src/Cpnucleo.RazorPages/Pages/Shared/_CardFluxoTrabalhoPartial.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_CardFluxoTrabalhoPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cpnucleo.Infra.CrossCutting.Util.ViewModels.TarefaViewModel
+﻿@model Cpnucleo.Infra.CrossCutting.Util.Common.DTOs.TarefaDTO
 
 <li class="@Model.TipoTarefa.Element image-align" id="@Model.Id" data-idworkflow="@Model.IdWorkflow" style="background-image:url(@Model.TipoTarefa.Image);">
     @Model.Nome
