[chore] aplicação de verificação nos dados incorretos retornados da API

--- a/src/Cpnucleo.RazorPages/Pages/Apontamento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Apontamento/Listar.cshtml
@@ -23,6 +23,10 @@
         </div>
         <br />
     }
+    else
+    {
+        
+    }
 
     <div class="col-lg-12">
         <div class="ibox collapsed">
