--- a/src/Cpnucleo.RazorPages/Pages/Workflow/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Workflow/Listar.cshtml
@@ -6,8 +6,8 @@
 }
 
 @section Styles {
-    <!-- DataTables -->
-    <link href="https://cpnucleo-assets.azurewebsites.net/css/plugins/dataTables/datatables.min.css" rel="stylesheet">
+<!-- DataTables -->
+<link href="https://cpnucleo-assets.azurewebsites.net/css/plugins/dataTables/datatables.min.css" rel="stylesheet">
 }
 
 <div class="row">
@@ -23,117 +23,121 @@
             </div>
             <div class="ibox-content">
 
+                <a class="btn btn-primary btn-sm" role="button" asp-page="Incluir">+ Workflow</a>
+                <br /><br />
+
                 @if (!ViewData.ModelState.IsValid)
                 {
                     <div asp-validation-summary="All" class="alert alert-danger alert-dismissible" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     </div>
                 }
-
-                <a class="btn btn-primary btn-sm" role="button" asp-page="Incluir">+ Workflow</a>
-                <br /><br />
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover table-datatable">
-                        <thead>
-                            <tr>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.Id)</th>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.Nome)</th>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.Ordem)</th>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.DataInclusao)</th>
-                                @if (Model.Lista.Count() > 0)
-                                {
-                                    <th class="no-sort"></th>
-                                    <th class="no-sort"></th>
-                                }
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.Lista)
-                            {
+                else
+                {
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover table-datatable">
+                            <thead>
                                 <tr>
-                                    <td>@item.Id</td>
-                                    <td>@item.Nome</td>
-                                    <td>@item.Ordem</td>
-                                    <td>@item.DataInclusao.ToString("dd/MM/yyyy")</td>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.Id)</th>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.Nome)</th>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.Ordem)</th>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.DataInclusao)</th>
                                     @if (Model.Lista.Count() > 0)
                                     {
-                                        <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-id="@item.Id">Alterar</a>
-                                        </td>
-                                        <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-id="@item.Id">Remover</a>
-                                        </td>
+                                        <th class="no-sort"></th>
+                                        <th class="no-sort"></th>
                                     }
                                 </tr>
-                            }
-                        </tbody>
-                        <tfoot>
-                            <tr>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.Id)</th>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.Nome)</th>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.Ordem)</th>
-                                <th>@Html.DisplayNameFor(x => x.Workflow.DataInclusao)</th>
-                                @if (Model.Lista.Count() > 0)
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.Lista)
                                 {
-                                    <th></th>
-                                    <th></th>
+                                    <tr>
+                                        <td>@item.Id</td>
+                                        <td>@item.Nome</td>
+                                        <td>@item.Ordem</td>
+                                        <td>@item.DataInclusao.ToString("dd/MM/yyyy")</td>
+                                        @if (Model.Lista.Count() > 0)
+                                        {
+                                            <td style="text-align: center">
+                                                <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-id="@item.Id">Alterar</a>
+                                            </td>
+                                            <td style="text-align: center">
+                                                <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-id="@item.Id">Remover</a>
+                                            </td>
+                                        }
+                                    </tr>
                                 }
-                            </tr>
-                        </tfoot>
-                    </table>
-                </div>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.Id)</th>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.Nome)</th>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.Ordem)</th>
+                                    <th>@Html.DisplayNameFor(x => x.Workflow.DataInclusao)</th>
+                                    @if (Model.Lista.Count() > 0)
+                                    {
+                                        <th></th>
+                                        <th></th>
+                                    }
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                }
+
             </div>
         </div>
     </div>
 </div>
 
 @section Scripts {
-    <!-- DataTables -->
-    <script src="https://cpnucleo-assets.azurewebsites.net/js/plugins/dataTables/datatables.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.table-datatable').DataTable({
-                language: {
-                    "lengthMenu": "Mostrando _MENU_ registros por página",
-                    "zeroRecords": "Nenhum registro encontrado",
-                    "info": "Mostrando página _PAGE_ de _PAGES_",
-                    "infoEmpty": "Não há registros disponíveis",
-                    "infoFiltered": "(filtrando de _MAX_ registros totais)",
-                    "search": "Buscar",
-                    "loadingRecords": "Carregando...",
-                    "processing": "Processando...",
-                    "paginate": {
-                        "first": "Primeira",
-                        "last": "Ultima",
-                        "next": "Próxima",
-                        "previous": "Anterior"
-                    }
-                },
-                pageLength: 10,
-                responsive: true,
-                dom: '<"html5buttons"B>lTfgitp',
-                buttons: [
-                    { extend: 'copy', text: 'Copiar', exportOptions: { columns: [0, 1, 2, 3] } },
-                    //{extend: 'csv', title: 'Relação de Workflow', exportOptions: { columns: [0, 1, 2, 3] }},
-                    { extend: 'excel', title: 'Relação de Workflow', exportOptions: { columns: [0, 1, 2, 3] } },
-                    { extend: 'pdf', title: 'Relação de Workflow', exportOptions: { columns: [0, 1, 2, 3] } },
-                    {
-                        extend: 'print', text: 'Imprimir', exportOptions: { columns: [0, 1, 2, 3] },
-                        customize: function (win) {
-                            $(win.document.body).addClass('white-bg');
-                            $(win.document.body).css('font-size', '10px');
+<!-- DataTables -->
+<script src="https://cpnucleo-assets.azurewebsites.net/js/plugins/dataTables/datatables.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.table-datatable').DataTable({
+            language: {
+                "lengthMenu": "Mostrando _MENU_ registros por página",
+                "zeroRecords": "Nenhum registro encontrado",
+                "info": "Mostrando página _PAGE_ de _PAGES_",
+                "infoEmpty": "Não há registros disponíveis",
+                "infoFiltered": "(filtrando de _MAX_ registros totais)",
+                "search": "Buscar",
+                "loadingRecords": "Carregando...",
+                "processing": "Processando...",
+                "paginate": {
+                    "first": "Primeira",
+                    "last": "Ultima",
+                    "next": "Próxima",
+                    "previous": "Anterior"
+                }
+            },
+            pageLength: 10,
+            responsive: true,
+            dom: '<"html5buttons"B>lTfgitp',
+            buttons: [
+                { extend: 'copy', text: 'Copiar', exportOptions: { columns: [0, 1, 2, 3] } },
+                //{extend: 'csv', title: 'Relação de Workflow', exportOptions: { columns: [0, 1, 2, 3] }},
+                { extend: 'excel', title: 'Relação de Workflow', exportOptions: { columns: [0, 1, 2, 3] } },
+                { extend: 'pdf', title: 'Relação de Workflow', exportOptions: { columns: [0, 1, 2, 3] } },
+                {
+                    extend: 'print', text: 'Imprimir', exportOptions: { columns: [0, 1, 2, 3] },
+                    customize: function (win) {
+                        $(win.document.body).addClass('white-bg');
+                        $(win.document.body).css('font-size', '10px');
 
-                            $(win.document.body).find('table')
-                                .addClass('compact')
-                                .css('font-size', 'inherit');
-                        }
+                        $(win.document.body).find('table')
+                            .addClass('compact')
+                            .css('font-size', 'inherit');
                     }
-                ],
-                "columnDefs": [{
-                    "targets": 'no-sort',
-                    "orderable": false,
-                }]
-            });
+                }
+            ],
+            "columnDefs": [{
+                "targets": 'no-sort',
+                "orderable": false,
+            }]
         });
-    </script>
+    });
+</script>
 }
