[feat] zaion trabalha a qualquer hora possível

--- a/src/Cpnucleo.RazorPages/Pages/Apontamento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Apontamento/Listar.cshtml
@@ -65,7 +65,7 @@
                                     <td>@item.Id</td>
                                     <td>@item.Descricao</td>
                                     <td>@item.Tarefa.Nome</td>
-                                    <td>@item.DataApontamento.Value.ToString("dd/MM/yyyy")</td>
+                                    <td>@item.DataApontamento.ToString("dd/MM/yyyy")</td>
                                     <td>@item.QtdHoras</td>
                                     <td>@item.DataInclusao.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
