--- a/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoPartial.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoPartial.cshtml
@@ -4,7 +4,7 @@
     data-nome-tarefa="@Model.Nome" data-id-tarefa="@Model.Id" data-id-recurso="@Model.IdRecurso">
     @Model.Nome
     <div class="agile-detail">
-        <i class="fa fa-clock-o"></i> @Model.DataTermino.Value.ToString("dd/MM/yyyy")
+        <i class="fa fa-clock-o"></i> @Model.DataTermino.ToString("dd/MM/yyyy")
         <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@Model.Id criada por @Model.Recurso.Nome</div>
         @if (Model.HorasRestantes >= 0)
         {
