[chore] retirada temporaria dos authorizations nas API V3

--- a/src/Cpnucleo.RazorPages/Pages/Apontamento/FluxoTrabalho.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Apontamento/FluxoTrabalho.cshtml
@@ -82,7 +82,7 @@
 
                                     $.ajax({
                                         type: "POST",
-                                        url: "/FluxoTrabalho",
+                                        url: "/Apontamento/FluxoTrabalho",
                                         data: { idTarefa: idTarefa, idWorkflow: idWorkflowColuna },
                                         beforeSend: function (xhr) {
 
