--- a/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 <a aria-expanded="false" role="button" asp-page="/Apontamento/Listar">Apontamentos</a>
                             </li>
                             <li>
-                                <a aria-expanded="false" role="button" asp-page="/FluxoTrabalho">Fluxo de Trabalho</a>
+                                <a aria-expanded="false" role="button" asp-page="/Apontamento/FluxoTrabalho">Fluxo de Trabalho</a>
                             </li>
                             <li class="dropdown">
                                 <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Gerenciar <span class="caret"></span></a>
